refact invoking